test/ui/tests/lowering/conflicting-attributes.stderr
error: the attribute `unsafe` is not supported yet
 --> ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:3:1
  |
3 | @unsafe @ignore
  | ^^^^^^^ 
  |

error[E006]: multiple `unsafe` attributes
 --> ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:3:1
  |
3 | @unsafe @ignore
  | ^^^^^^^ duplicate or conflicting attribute
  |
 --> ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:4:1
  |
4 | @unsafe
  | ^^^^^^^ duplicate or conflicting attribute
  |

error: the attribute `ignore` is not supported yet
 --> ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:3:9
  |
3 | @unsafe @ignore
  |         ^^^^^^^ 
  |

error[E006]: multiple `ignore` attributes
 --> ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:3:9
  |
3 | @unsafe @ignore
  |         ^^^^^^^ duplicate or conflicting attribute
  |
 --> ${TEST_FOLDER}/lowering/conflicting-attributes.lushui:5:1
  |
5 | @ignore
  | ^^^^^^^ duplicate or conflicting attribute
  |

error: aborting due to 4 previous errors

